tests/neg-macros/i21916/Test_2.scala
// lack of type ascription is on purpose,
// as that was part of what would cause the crash before.
@main def Test = Macro.test() // error
